# full-contract-example

./: .babelrc  .gitignore  .gitmodules  Makefile  README.md  README.md.bak  bar.json  deploy.json  deploy.yaml  foo.json  package-lock.json  package.json  test.yaml  xdrTypes.js
browser/: README.md  package-lock.json  package.json
browser/src/: ExampleContract.json
browser/src/components/: HelloWorld.vue
contract/: Cargo.toml
contract/src/: lib.rs  main.rs  xdr.rs
tests/: basic-tests.json  query-tests.json
xdr/: bar.x  foo.x
