[package]
name = "contract"
version = "0.1.0"
authors = ["Kyle Bartush <kbartush@kochava.com>"]
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
mazzaroth-rs = { git = "ssh://git@github.com/kochavalabs/mazzaroth-rs.git", branch = "develop"}

[target.'cfg(target_arch = "x86_64")'.dependencies]
mazzaroth-rs = { git = "ssh://git@github.com/kochavalabs/mazzaroth-rs.git", branch = "develop"}

[dependencies]
mazzaroth-rs-derive = { git = "ssh://git@github.com/kochavalabs/mazzaroth-rs.git", branch = "develop"}
xdr-rs-serialize = { git = "ssh://git@github.com/kochavalabs/xdr-rs-serialize.git", branch = "develop"}
xdr-rs-serialize-derive = { git = "ssh://git@github.com/kochavalabs/xdr-rs-serialize.git", branch = "develop"}
mazzaroth-xdr = { git = "ssh://git@github.com/kochavalabs/mazzaroth-xdr.git", branch = "develop"}
