[package]
name = "contract"
version = "0.1.0"
authors = ["Kyle Bartush <kbartush@kochava.com>"]
edition = "2018"

[dependencies]
mazzaroth-rs = { git = "https://git@github.com/kochavalabs/mazzaroth-rs.git", branch = "develop"}
mazzaroth-rs-derive = { git = "https://git@github.com/kochavalabs/mazzaroth-rs.git", branch = "develop"}
xdr-rs-serialize = { git = "https://git@github.com/kochavalabs/xdr-rs-serialize.git", branch = "develop"}
xdr-rs-serialize-derive = { git = "https://git@github.com/kochavalabs/xdr-rs-serialize.git", branch = "develop"}
mazzaroth-xdr = { git = "https://git@github.com/kochavalabs/mazzaroth-xdr.git", branch = "develop"}
json = "0.12.0"
