[package]
name = "contract"
version = "0.1.0"
authors = ["Kochavalabs"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mazzaroth-rs = "0.8.1"
mazzaroth-rs-derive = "0.8.1"
xdr-rs-serialize = "0.3.0"
xdr-rs-serialize-derive = "0.3.0"
mazzaroth-xdr = "0.8.2"
json = "0.12.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true
codegen-units = 1
